--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "date-fns": "4.1.0",
+    "doppler": "1.0.0",
     "envalid": "8.0.0",
     "esbuild": "0.24.0",
     "reflect-metadata": "0.2.2",
@@ -53,6 +54,6 @@
     "typescript": "5.7.2"
   },
   "engines": {
-    "node": "20.17.0"
+    "node": "23.11.0"
   }
 }
