--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "dev:token": "node --env-file=.env -r esbuild-register ./src/get-linkedin-token.ts",
     "dev:consumer": "node --env-file=.env -r esbuild-register ./src/launch-sqs-consumer.ts",
     "audit:critical": "npm audit --audit-level=critical",
-    "clean": "rm -rf dist node_modules"
+    "clean": "rm -rf dist node_modules",
+    "serve": "node --env-file=.env -r esbuild-register ./src/server.ts",
+    "dev:server": "node --env-file=.env -r esbuild-register --watch ./src/server.ts"
   },
   "dependencies": {
     "@aws-sdk/client-sqs": "3.709.0",
@@ -25,10 +27,13 @@
     "axios": "1.13.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
+    "cors": "2.8.5",
     "date-fns": "4.1.0",
     "doppler": "1.0.0",
     "envalid": "8.0.0",
     "esbuild": "0.27.2",
+    "express": "5.2.1",
+    "node-cron": "4.2.1",
     "reflect-metadata": "0.2.2",
     "uuid": "11.0.3",
     "winston": "3.17.0"
@@ -37,13 +42,17 @@
     "@eslint/eslintrc": "3.2.0",
     "@eslint/js": "9.16.0",
     "@types/aws-lambda": "8.10.146",
+    "@types/cors": "2.8.19",
+    "@types/express": "5.0.6",
     "@types/jest": "29.5.14",
     "@types/node": "22.10.1",
+    "@types/node-cron": "3.0.11",
+    "@types/supertest": "6.0.3",
     "@typescript-eslint/eslint-plugin": "8.18.0",
     "@typescript-eslint/parser": "8.18.0",
     "better-opn": "3.0.2",
     "esbuild-register": "3.6.0",
-    "eslint": "9.16.0",
+    "eslint": "9.39.2",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.2.1",
     "jest": "29.7.0",
@@ -51,6 +60,7 @@
     "prettier": "3.4.2",
     "prettier-plugin-sort-imports": "1.8.6",
     "sqs-consumer": "11.2.0",
+    "supertest": "7.1.4",
     "ts-jest": "29.2.5",
     "typescript": "5.7.2"
   },
